# fiber-diameter-measurement

./: .gitignore  README.md  pyproject.toml
packaging/assets/icons/: ATTRIBUTION.md
packaging/inno-setup/: fdm_installer.iss  version.auto.iss
packaging/pyinstaller/: fdm_onedir.spec
runtime/camera/microview/driver/: MVBT.inf  MVBT.sys  saa7130.sys
runtime/camera/microview/x64/: MVDEVICE.ocx
runtime/camera/microview/x86/: MVDEVICE.ocx  MV_Twain.ds
runtime/segment-anything/edge_sam_3x/: README.md
sample_data/: README.md
scripts/: build_support.py  build_windows_installer.bat  build_windows_installer.py  build_windows_onedir.bat  build_windows_onedir.py
src/fdm/: __init__.py  __main__.py  app.py  area_display.py  content_experiment.py  geometry.py  history.py  microview_helper.py  models.py  project_io.py  raster.py  runtime_logging.py  settings.py  version.py
src/fdm/_vendor/: __init__.py
src/fdm/services/: __init__.py  area_inference.py  capture.py  content_workbook.py  cu_scale_io.py  export_service.py  fiber_quick_geometry.py  model_provider.py  preview_analysis.py  prompt_segmentation.py  raw_record_export.py  reference_instance_propagation.py  sidecar_io.py  snap_service.py
src/fdm/ui/: __init__.py  area_inference_worker.py  canvas.py  dialogs.py  fiber_quick_geometry_worker.py  icons.py  image_loader.py  main_window.py  microview_preview_host.py  preview_analysis_dialog.py  preview_analysis_worker.py  prompt_segmentation_worker.py  reference_instance_worker.py  rendering.py  theme.py  widgets.py
src/fdm/workers/: area_worker.py
src/fiber_diameter_measurement.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_area_inference.py  test_build_support.py  test_build_windows_installer.py  test_capture_and_cu_scale.py  test_content_experiment.py  test_export_service.py  test_fiber_quick_geometry.py  test_history_and_sidecar.py  test_models_project_io.py  test_preview_analysis.py  test_prompt_segmentation.py  test_raster_and_snap.py  test_reference_instance_propagation.py  test_ui_canvas_and_export.py
