[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fiber-diameter-measurement"
dynamic = ["version"]
description = "Offline desktop software for fiber diameter measurement."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.7",
  "qtawesome>=1.4",
  "opencv-python>=4.10",
  "numpy>=1.26",
  "pandas>=2.2",
  "openpyxl>=3.1",
  "onnxruntime>=1.18",
  "Pillow>=10.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]
area-infer = [
  "torch>=2.4",
  "torchvision>=0.19",
]
interactive-seg = [
  "torch>=2.4",
  "torchvision>=0.19",
  "timm>=1.0",
  "segment-anything-hq",
]
packaging = [
  "pyinstaller>=6.0",
]

[project.scripts]
fdm = "fdm.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "fdm.version.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
